// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Date renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          disabled={true}
          placeholder=" "
          type="date"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO hzEpJE"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO iSsDGf"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO exYPQF"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder=" "
          readOnly={true}
          type="date"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-jSPclO eIcaFQ"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-jSPclO ntqLf"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO fJeWzx"
          dir="rtl"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-gbFqDM jHsxVm"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <input
        className="sc-jSPclO fBRZSW"
        placeholder="medium"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <input
        className="sc-jSPclO hUvnrR"
        placeholder="large"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO ipVsRy"
          placeholder="xlarge"
          type="date"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO IYUVx"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO dfTCla"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh kXEagA"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
